more complex componenets | open spot

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
 }
 
 @font-face {
-  font-family: "Billabong2";
+  font-family: "Billabong";
   src: local("Billabong"), url(./fonts/Billabong.ttf) format("truetype");
 }
 
